--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "flutter_application_2",
-  "short_name": "flutter_application_2",
+  "name": "chess_clock",
+  "short_name": "chess_clock",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0175C2",
